# crusty

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  release.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: build_plugin.yml  release.yml
crates/crusty/: CHANGELOG.md  Cargo.toml
crates/crusty/src/: lib.rs  logging.rs  main.rs
crates/crusty/src/agent/: agent.rs  message.rs  mod.rs  prompt.rs
crates/crusty/src/agent/memory/: context.rs  message.rs  mod.rs  session.rs  store.rs
crates/crusty/src/agent/tools/: calculator.rs  datetime.rs  mod.rs  runtime.rs  weather.rs
crates/crusty/src/ai_proxy/: _9router.rs  ai_proxy.rs  mod.rs  omni_route.rs
crates/crusty/src/cli/: chat.rs  config.rs  mod.rs  mode.rs  plugin.rs  provider.rs  proxy.rs  setup.rs  start.rs  store.rs  utils.rs
crates/crusty/src/config/: config.rs  mod.rs  plugin.rs  provider.rs  store.rs
crates/crusty/src/exceptions/: crusty.rs  mod.rs
crates/crusty/src/helpers/: fs.rs  mod.rs  npm.rs  process.rs  tui.rs  types.rs
crates/crusty/src/plugin/: loader.rs  manager.rs  metadata.rs  mod.rs
crates/crusty_plugin_example/: Cargo.toml
crates/crusty_plugin_example/plugin/: metadata.json
crates/crusty_plugin_example/src/: lib.rs
crates/crusty_plugin_telegram/: CHANGELOG.md  Cargo.toml  plugin.crusty.json
crates/crusty_plugin_telegram/plugin/: metadata.json
crates/crusty_plugin_telegram/src/: bot.rs  config.rs  lib.rs
crates/plugin/: CHANGELOG.md  Cargo.toml
crates/plugin/src/: bridge.rs  lib.rs  plugin.rs
crusty-desktop/: index.html  package.json
crusty-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crusty-desktop/src-tauri/src/: main.rs
scripts/: build.py  build_all.py  build_all_plugin.py
src/: lib.rs  logging.rs  main.rs
src/agent/: agent.rs
src/ai_proxy/: _9router.rs  ai_proxy.rs  mod.rs
src/cli/: chat.rs  mod.rs  proxy.rs  setup.rs  utils.rs
src/config/: ai_proxy.rs  config.rs
src/helpers/: _9router.rs  command.rs  mod.rs  npm.rs  process.rs  tui.rs
