[workspace]
resolver = "2"
publish = false
release_always = true
 
members = [
    "crates/plugin",  
    "crates/crusty", "crates/crusty_plugin_example",
]

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.15"
indicatif = "0.17"
futures-util = "0.3.32"
reqwest = { version = "0.11", features = ["json"] }
rig-core = "0.36.0"
sysinfo = "0.38.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unused_variables = "allow"
dead_code = "allow"
non_snake_case = "allow"

